lab1/Test/L1-A-8-51.cmm
int ;
float && nSg1pye ( ) {
  struct t1uD_e35d2 {
  }kSc_ [ 779822209 ] ;
  if ( yb9S )   while ( eSrv283Sq7cUn3GPYW )   return 
    bFaj61L3YoZDgkGaBEw_ ;

else   AdssKrxjtI45D8W0oTln = LOJpOzBo6L4piQww || 
    hGfBglLN_Fsu21v <= D1dMw07_ZeLE + sTw5Gfq6CVDpup4lx 
    * iyxdi9yG [ gpx && IzQr > khg3JM / ! - PM_4ew9yG123R9UGjpnV 
    ( CTM0lZ1CX2sOQ || Q80cek >= ( djLcq17 && Od4HR7Gk8GFn8otgzvi 
    == ! ! - MkldX [ IQhfuFPqAYg2DfNgkLl || pjaR7Bz2lAv 
    && SVny < - T ( ygB_ , s8LkTm9TkXIW3prLL7Y != ! ( 
    dqjpOkolNKyN5DnZ11 = TmZAjCGBn2_xd || ZgVV10NncQuiIO 
    && / WcS_pF9RJQHm5 ) ) ] - ! ! 2014282671 ) * ! 607818270.1397131301 
    . n0r9Avh - HGM1GHUk4CdhuK ( ) . JJZHXcqURHWWFe ) 
    - ! - oJQAe0OMMnQA ] ;

}
struct {
  struct QhVnQGEA4h5Tr7Z GEFkyXwnskdJMia9CP , ICRc37pCIIdJzXRY 
    , qSeRqIbFeTKAtRyBoDTk = u ;
}w5_m7gGof , X15We8Hf3 

;
struct ui hP7KNLi0or 
;
int ;
int ;
int Am6Md0TcmIgBDc ( int eQGX9LhYzMwcYX03w80 ) {
}
int Sqh5hrzS ( ) {
  X149FkWWB ;
  if ( SWNZQIXD1tOj67tw )   Gds9p3o ;
else ==   if ( dh ) {
  }

}
int ;
int ;
int ;
int cwd21w_Q4 ( int r * , int Ec82c1SlzW_ ) {
}
